# cpp-get-started

./: .gitignore  README.md  build.sh  start.sh
EssentialCppSourceCode/codeEssential/chapter5/chap5/: build-and-run.sh
HelloWorld/: CMakeLists.txt  README.md  main.cpp
error-handling/: build-and-run.sh  main.cpp
file/: build-and-run.v1.sh  build-and-run.v2.sh  kvstore.adv.cpp  kvstore.cpp  numbers.dump.txt
